--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Parallax - Materialize</title>
 
   <!-- CSS  -->
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+
 </head>
 <body>
-  <nav class="white" role="navigation">
+  <nav class="blue lighten-5" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="https://donfiler.us/webdoc/" class="brand-logo">WEBDOC</a>
+      <a id="logo-container" href="https://donfiler.us/" class="brand-logo">WEBDOC - Don Filer</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="https://donfiler.us">Don Filer</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://donfiler.us/pgrid/">Resume</a></li>
+        <li><a href="https://donfiler.us/portfolio.html">Portfolio</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="https://donfiler.us">Don filer</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://donfiler.us/pgrid/">Resume</a></li>
+        <li><a href="https://donfiler.us/portfolio.html">Portfolio</a></li>
       </ul>
       <a href="https://donfiler.us" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -29,12 +35,12 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
+        <h1 class="header center teal-text text-lighten-2">Responsive Web Development</h1>
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h4 class="header col s12 black-text">A full stack web construction company</h4>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+          <a href="http://donfiler.net" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
         </div>
         <br><br>
 
@@ -51,28 +57,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center yellow-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Faster Development Time</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">We use technology to create our web sites faster. Using platforms like Nodejs,Bootstrap4, Materialize, and WordPress we are able to create mock-ups quickly and get your feedback about how you want your design to look aor work.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+            <h2 class="center purple-text"><i class="material-icons">group</i></h2>
             <h5 class="center">User Experience Focused</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Utilizing elements and principles of Material Design, we're able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Easy to Work With</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">We provide detailed documentation as well as specific code examples to help users get acquainted with the way we work. We are also always open to feedback and can answer any questions a user may have about what we are doing for you.</p>
           </div>
         </div>
       </div>
@@ -81,11 +87,11 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" id="contact">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">To arrange a consultation, and start making an IMPACT contact us <i class="material-icons">phone </i> (707) 217-8457</h5>
         </div>
       </div>
     </div>
@@ -98,7 +104,7 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
+          <h4>For more information contact us</h4>
           <div class="row center">
           <a href="https://donfiler.us/contact-form/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1" target="blank">Contact Form</a>
         </div>
@@ -113,7 +119,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">We look forward to making you successful</h5>
         </div>
       </div>
     </div>
@@ -130,28 +136,28 @@
 
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Blogs</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://donfiler.blogspot.com"><i class="material-icons">create</i>My Blog</a></li>
+            <li><a class="white-text" href="https://impactmarketingconsultant.wordpress.com"><i class="material-icons">create</i>Marketing Blog</a></li>
+            <li><a class="white-text" href="https://mobilefriendlywebdesign.wordpress.com"><i class="material-icons">create</i>Web Design Blog</a></li>
+            <li><a class="white-text" href="https://www.amazon.com/Mr.-Donald-P.-Filer/e/B01JUZDBKG"><i class="material-icons">create</i>Published Books</a></li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Social</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://www.facebook.com/don.filer"><i class="fa fa-facebook "></i>  Facebook</a></li>
+            <li><a class="white-text" href="https://twitter.com/donfiler"><i class="fa fa-twitter "></i>  Twitter</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/filerdon/?trk=profile-badge"><i class="fa fa-linkedin "></i>  LinkedIn</a></li>
+            <li><a class="white-text" href="https://github.com/donfiler"><i class="fa fa-github "></i>  Github</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      &copy 2017 Made by <a class="brown-text text-lighten-3" href="http://donfiler.net">  WebDoc - Don Filer</a>
       </div>
     </div>
   </footer>
