--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <script src="https://use.fontawesome.com/68b14da546.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50566929-1 "></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-50566929-1');
+    </script>
 
 </head>
 
 <body>
-    <nav class="blue lighten-5" role="navigation">
+    <nav class="blue lighten-4" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="https://donfiler.us/" class="brand-logo">WEBDOC - Don Filer</a>
             <ul class="right hide-on-med-and-down">
@@ -26,10 +40,11 @@
 
             <ul id="nav-mobile" class="side-nav">
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://donfiler.us/pgrid/">Resume</a></li>
+                <li><a href="https://donfiler.us/pdf/Don_Filer_new.pdf/">Resume</a></li>
                 <li><a href="https://donfiler.us/portfolio.html">Portfolio</a></li>
             </ul>
-            <a href="https://donfiler.us" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="https://donfiler.us" data-activates="nav-mobile" class="button-collapse"><i
+                    class="material-icons">menu</i></a>
         </div>
     </nav>
 
@@ -48,7 +63,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="background1.jpg" alt="Golden Gate Bridge"></div>
     </div>
 
 
@@ -143,26 +158,35 @@
                 <div class="col l3 s12">
                     <h5 class="white-text">Blogs</h5>
                     <ul>
-                        <li><a class="white-text" href="https://donfiler.blogspot.com"><i class="material-icons">create</i>My Blog</a></li>
-                        <li><a class="white-text" href="https://impactmarketingconsultant.wordpress.com"><i class="material-icons">create</i>Marketing Blog</a></li>
-                        <li><a class="white-text" href="https://mobilefriendlywebdesign.wordpress.com"><i class="material-icons">create</i>Web Design Blog</a></li>
-                        <li><a class="white-text" href="https://www.amazon.com/Mr.-Donald-P.-Filer/e/B01JUZDBKG"><i class="material-icons">create</i>Published Books</a></li>
+                        <li><a class="white-text" href="https://donfiler.blogspot.com"><i
+                                    class="material-icons">create</i>My Blog</a></li>
+                        <li><a class="white-text" href="https://impactmarketingconsultant.wordpress.com"><i
+                                    class="material-icons">create</i>Marketing Blog</a></li>
+                        <li><a class="white-text" href="https://mobilefriendlywebdesign.wordpress.com"><i
+                                    class="material-icons">create</i>Web Design Blog</a></li>
+                        <li><a class="white-text" href="https://www.amazon.com/Mr.-Donald-P.-Filer/e/B01JUZDBKG"><i
+                                    class="material-icons">create</i>Published Books</a></li>
                     </ul>
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Social</h5>
                     <ul>
-                        <li><a class="white-text" href="https://www.facebook.com/don.filer"><i class="fa fa-facebook "></i>  Facebook</a></li>
-                        <li><a class="white-text" href="https://twitter.com/donfiler"><i class="fa fa-twitter "></i>  Twitter</a></li>
-                        <li><a class="white-text" href="https://www.linkedin.com/in/filerdon/?trk=profile-badge"><i class="fa fa-linkedin "></i>  LinkedIn</a></li>
-                        <li><a class="white-text" href="https://github.com/donfiler"><i class="fa fa-github "></i>  Github</a></li>
+                        <li><a class="white-text" href="https://www.facebook.com/don.filer"><i
+                                    class="fa fa-facebook "></i> Facebook</a></li>
+                        <li><a class="white-text" href="https://twitter.com/donfiler"><i class="fa fa-twitter "></i>
+                                Twitter</a></li>
+                        <li><a class="white-text" href="https://www.linkedin.com/in/filerdon/?trk=profile-badge"><i
+                                    class="fa fa-linkedin "></i> LinkedIn</a></li>
+                        <li><a class="white-text" href="https://github.com/donfiler"><i class="fa fa-github "></i>
+                                Github</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                &copy 2017 Made by <a class="brown-text text-lighten-3" href="https://donfiler.us">  WebDoc - Don Filer</a>
+                &copy 2017 Made by <a class="brown-text text-lighten-3" href="https://donfiler.us"> WebDoc - Don
+                    Filer</a>
             </div>
         </div>
     </footer>
