--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 <body>
     <nav class="blue lighten-4" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="https://donfiler.us/" class="brand-logo">WEBDOC - Don Filer</a>
+            <a id="logo-container" href="http://donfiler.com/" class="brand-logo">WEBDOC - Don Filer</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://donfiler.us/pdf/Don_Filer_new.pdf">Resume</a></li>
-                <li><a href="https://donfiler.us/portfolio.html">Portfolio</a></li>
+                <li><a href="http://donfiler.com/pdf/Don_Filer_new.pdf">Resume</a></li>
+                <li><a href="http://donfiler.com/portfolio.html">Portfolio</a></li>
             </ul>
 
             <ul id="nav-mobile" class="side-nav">
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://donfiler.us/pdf/Don_Filer_new.pdf/">Resume</a></li>
-                <li><a href="https://donfiler.us/portfolio.html">Portfolio</a></li>
+                <li><a href="http://donfiler.com/pdf/Don_Filer_new.pdf/">Resume</a></li>
+                <li><a href="http://donfiler.com/portfolio.html">Portfolio</a></li>
             </ul>
-            <a href="https://donfiler.us" data-activates="nav-mobile" class="button-collapse"><i
+            <a href="http://donfiler.com" data-activates="nav-mobile" class="button-collapse"><i
                     class="material-icons">menu</i></a>
         </div>
     </nav>
@@ -57,7 +57,7 @@
                     <h4 class="header col s12 black-text">A full stack web construction company</h4>
                 </div>
                 <div class="row center">
-                    <a href="http://donfiler.us" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
+                    <a href="http://donfiler.com" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
                 </div>
                 <br><br>
 
@@ -111,7 +111,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="row center">
-                    <h5 class="header col s12 light">To arrange a consultation, and start making an IMPACT contact us <i class="material-icons">phone </i> (707) 217-8457</h5>
+                    <h5 class="header col s12 light">To arrange a consultation, and start making an IMPACT contact us <i class="material-icons">phone </i> (707) 867-5271</h5>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h4>For more information contact us</h4>
                     <div class="row center">
-                        <a href="https://donfiler.us/contact-form/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1" target="blank">Contact Form</a>
+                        <a href="http://donfiler.com/contact-form/" id="download-button" class="btn-large waves-effect waves-light teal lighten-1" target="blank">Contact Form</a>
                     </div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                &copy 2017 Made by <a class="brown-text text-lighten-3" href="https://donfiler.us"> WebDoc - Don
+                &copy 2017 Made by <a class="brown-text text-lighten-3" href="https://donfiler.com"> WebDoc - Don
                     Filer</a>
             </div>
         </div>
