--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <h3><i class="mdi-content-send brown-text "></i></h3>
                     <h4>For more information contact us</h4>
                     <div class="row center ">
-                        <a href="http://donfiler.com/contact " id="download-button " class="btn-large waves-effect waves-light teal lighten-1 " target="blank ">Contact Form</a>
+                        <a href="http://donfiler.com/contact/ " id="download-button " class="btn-large waves-effect waves-light teal lighten-1 " target="blank ">Contact Form</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
         <div class="footer-copyright ">
             <div class="container ">
                 &copy 2017 Made by
-                <a class="brown-text text-lighten-3 " href="http//donfiler.com/ ">
+                <a class="brown-text text-lighten-3 " href="#">
                     WebDoc - Don Filer</a>
             </div>
         </div>
